入荷履歴用エンドポイントを実装
