# internal/stocker/infrastructure/model/stockin_model.go
@@ -1,0 +1,18 @@
+package model
+
+import "time"
+
+type StockInModel struct {
+	Id        []byte
+	Place     string
+	StoreId   []byte
+	ItemId    []byte
+	Stocks    int
+	Price     int
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
+
+func (StockInModel) TableName() string {
+	return "stock_ins"
+}
